--- a/src/gui/AutomatonProgram.fxml
+++ b/src/gui/AutomatonProgram.fxml
@@ -82,7 +82,7 @@
                                           <Insets left="50.0" />
                                        </GridPane.margin>
                                     </Label>
-                                    <Button mnemonicParsing="false" onAction="#startCreation" stylesheets="@css/AutomatonProgramTheme.css" text="Start" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                                    <Button fx:id="startButton" mnemonicParsing="false" onAction="#startCreation" stylesheets="@css/AutomatonProgramTheme.css" text="Start" GridPane.columnIndex="2" GridPane.rowIndex="5">
                                        <GridPane.margin>
                                           <Insets left="120.0" />
                                        </GridPane.margin>
@@ -271,12 +271,120 @@
           </Tab>
           <Tab text="Connected Resume">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BorderPane layoutX="1.0" prefHeight="564.0" prefWidth="720.0">
+                           <top>
+                              <Label text="CONNECTED AUTOMATON" BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets left="20.0" top="50.0" />
+                                 </BorderPane.margin>
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Label>
+                           </top>
+                           <center>
+                              <GridPane BorderPane.alignment="CENTER">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Following states were not accesible in the original automaton:">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label fx:id="listOfUnaccesibleStates" text="---" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="15.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label text="The connected automaton has the following states:" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label fx:id="listOfConnectedStates" text="---" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="15.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                 </children>
+                              </GridPane>
+                           </center>
+                        </BorderPane>
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="Minimum Resume">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BorderPane layoutX="2.0" prefHeight="564.0" prefWidth="717.0">
+                           <center>
+                              <GridPane BorderPane.alignment="CENTER">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="The original automaton had the following states:">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label fx:id="listOfOriginalStates" text="---" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label text="States grouped:" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label fx:id="listOfGroupedStates" text="---" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label text="The minimum automaton has the following states:" GridPane.rowIndex="2">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                    <Label fx:id="listOfMinimumStates" text="---" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                       <GridPane.margin>
+                                          <Insets left="20.0" />
+                                       </GridPane.margin>
+                                    </Label>
+                                 </children>
+                              </GridPane>
+                           </center>
+                           <top>
+                              <Label text="MINIMUM RESUME" BorderPane.alignment="CENTER">
+                                 <BorderPane.margin>
+                                    <Insets left="20.0" top="50.0" />
+                                 </BorderPane.margin>
+                                 <font>
+                                    <Font size="25.0" />
+                                 </font>
+                              </Label>
+                           </top>
+                        </BorderPane>
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Information">
